UpdateTeamScore swagger
